plugins/core/web-app/css/contact.css
#body-menu li.contacts h3 { background-image:url("../images/icons/contacts.png"); }
#body-menu li.groups h3 { background-image:url("../images/icons/groups.png"); }
#body-menu li.smartgroups h3 { background-image:url("../images/icons/smartgroups.png"); }

#body.contacts #list-container > * { width:auto }
#body.contacts #list-head { background-color:white; border-bottom:1px solid #9e9e9e; padding:0 17px; }
#body.contacts #list-head .content { display:table; width:100%; padding-bottom:17px; }
#body.contacts #list-head .content.all { display:table; width:100%; padding-bottom:0; }
#body.contacts #list-head .content.all > * { display:table-cell; }
#body.contacts #list-head .header-buttons { text-align:right; }
#body.contacts #list-head .all h1 { background-image:url("../images/icons/contacts.png"); }
#body.contacts #list-head .group h1 { background-image:url("../images/icons/groups.png"); }
#body.contacts #list-head .smartgroup h1 { background-image:url("../images/icons/smartgroups.png"); }

#body.contacts #list li { padding:0 17px; display:table; }
#body.contacts #list li:hover { background-color:#e5eff3; }
#body.contacts #list li.selected { background-color:#d8e8ef; }
#body.contacts #list li > * { display:table-cell; vertical-align:middle; }
#body.contacts #list li a { padding:7px; width:100%; }

#body.contacts #detail { padding:37px; background-color:#d8e8ef; border-left:1px solid #9e9e9e; }
#body.contacts #detail #multiple-contacts { display:none; }

#body.contacts table input[type="text"], #body.contacts table textarea, #body.contacts td:nth-child(1) { padding:5px; }
#body.contacts td:nth-child(1) { padding-right:20px; }

#body.contacts #detail #single-contact .buttons { margin:17px; }

#body.contacts #detail #single-contact #message-stats { position:absolute; top:17px; right:17px; }
#body.contacts #detail #single-contact #message-stats h2 { font-weight:bold; }
#body.contacts #detail #single-contact #message-stats ul { margin:10px 0; }
#body.contacts #detail #single-contact #message-stats ul li { padding:5px 0 5px 25px;
	background-position:left center; background-repeat:no-repeat; }
#body.contacts #detail #single-contact #message-stats ul li.sent { background-image:url("../images/message/sent.png"); }
#body.contacts #detail #single-contact #message-stats ul li.received { background-image:url("../images/message/received.png"); }

